force-app/main/default/objects/CMPL123__Action__c/CMPL123__Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>