force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Action_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>