force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>