force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Assigned_To_Me__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Assigned_To_Me__c</fullName>
    <description>Used for a list views filter</description>
    <formula>CMPL123__Assigned_To__r.Id=$User.Id</formula>
    <label>Assigned To Me?</label>
    <type>Checkbox</type>
</CustomField>