force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>