force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Error_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>