force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__External_Workflow_Action_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__External_Workflow_Action_Performed_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Workflow Action Performed By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>