force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__External_Workflow_Action_Performed_On__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__External_Workflow_Action_Performed_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Workflow Action Performed On</label>
    <type>DateTime</type>
</CustomField>