force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123__Message_ID__c.field-meta.xml
<CustomField>
    <fullName>CMPL123__Message_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>