force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123QMS__CAPA__c.field-meta.xml
<CustomField>
    <fullName>CMPL123QMS__CAPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAPA</label>
    <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>