force-app/main/default/objects/CMPL123__Action__c/fields/CMPL123QMS__Department__c.field-meta.xml
<CustomField>
    <fullName>CMPL123QMS__Department__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CMPL123QMS__Department</valueSetName>
    </valueSet>
</CustomField>