force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Action_ID__c.field-meta.xml
<CustomField>
    <fullName>OLY_Action_ID__c</fullName>
    <displayFormat>AC-{000000}</displayFormat>
    <label>Action ID</label>
    <type>AutoNumber</type>
</CustomField>