force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Action_Not_Completed__c.field-meta.xml
<CustomField>
    <fullName>OLY_Action_Not_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Not Completed</label>
    <type>Checkbox</type>
</CustomField>