force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>OLY_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>