force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>OLY_Assigned_to_Me__c</fullName>
    <formula>OLY_Assigned_To__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Me?</label>
    <type>Checkbox</type>
</CustomField>