force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Complaint__c.field-meta.xml
<CustomField>
    <fullName>OLY_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for Parent Complaint Record</description>
    <label>Complaint</label>
    <referenceTo>CMPL123CME__Complaint__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>