force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>OLY_Completed_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>