force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>OLY_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>