force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Expected_Product__c.field-meta.xml
<CustomField>
    <fullName>OLY_Expected_Product__c</fullName>
    <formula>OLY_Investigation__r.TWD_Complaint__r.TWD_Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Product</label>
    <type>Text</type>
</CustomField>