force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>OLY_Inquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry</label>
    <referenceTo>CMPL123CME__Inquiry__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>