force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Investigation__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>CMPL123QMS__Investigation__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>