force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Investigation_Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation_Assigned_to_Me__c</fullName>
    <formula>OLY_Investigation__r.TWD_Assigned_To_Me__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigation Assigned to Me?</label>
    <type>Checkbox</type>
</CustomField>