force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Canceled__c</fullName>
    <formula>CMPL123_WF_Status__c = &apos;Canceled&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Canceled</label>
    <type>Checkbox</type>
</CustomField>