force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Closed__c</fullName>
    <formula>CMPL123_WF_Status__c = &apos;Closed&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>