force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Is_Olympus_the_Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Olympus_the_Manufacturing_Site__c</fullName>
    <formula>OLY_Complaint__r.CMPL123CME__Product__r.OLY_Is_Olympus_the_Manufacturer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Olympus the Manufacturing Site</label>
    <type>Checkbox</type>
</CustomField>