force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Overdue__c</fullName>
    <formula>TODAY() &gt;  CMPL123__Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>