force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Is_Pending__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Pending__c</fullName>
    <formula>NOT(OR(
    OLY_Is_Closed__c,
    OLY_Is_Canceled__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Pending</label>
    <type>Checkbox</type>
</CustomField>