force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Labeled_for_Single_Use__c.field-meta.xml
<CustomField>
    <fullName>OLY_Labeled_for_Single_Use__c</fullName>
    <formula>TEXT(OLY_Complaint__r.CMPL123CME__Product__r.OLY_Labeled_for_Single_Use__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labeled for Single Use</label>
    <type>Text</type>
</CustomField>