force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>OLY_Manufacturing_Site__c</fullName>
    <formula>OLY_Complaint__r.OLY_Manufacturing_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing Site</label>
    <type>Text</type>
</CustomField>