force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>OLY_Parent_Record__c</fullName>
    <formula>IF(not(isblank(OLY_Complaint__c)), HYPERLINK (&quot;/&quot; &amp;  OLY_Complaint__c ,  OLY_Complaint__r.Name,&quot;_blank&quot;),
IF(not(isblank(OLY_Inquiry__c)), HYPERLINK (&quot;/&quot; &amp;  OLY_Inquiry__c , OLY_Inquiry__r.Name,&quot;_blank&quot;),
IF(not(isblank(OLY_Investigation__c)),  HYPERLINK (&quot;/&quot; &amp;  OLY_Investigation__c, OLY_Investigation__r.Name , &quot;_blank&quot;),&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Record</label>
    <type>Text</type>
</CustomField>