force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Patient_Impacted__c.field-meta.xml
<CustomField>
    <fullName>OLY_Patient_Impacted__c</fullName>
    <formula>TEXT(OLY_Complaint__r.OLY_Patient_Impacted__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Impacted</label>
    <type>Text</type>
</CustomField>