force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Product__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product__c</fullName>
    <formula>IF(not(isblank(OLY_Investigation__c)),  HYPERLINK (&quot;/&quot; &amp;  OLY_Investigation__r.TWD_Complaint__r.CMPL123CME__Product__c, OLY_Investigation__r.TWD_Complaint__r.CMPL123CME__Product__r.Name , &quot;_blank&quot;),
IF(not(isblank(OLY_Complaint__c)), HYPERLINK (&quot;/&quot; &amp;  OLY_Complaint__r.CMPL123CME__Product__c , OLY_Complaint__r.CMPL123CME__Product__r.Name,&quot;_blank&quot;),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>