force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Model__c</fullName>
    <formula>OLY_Complaint__r.OLY_Model_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Model</label>
    <type>Text</type>
</CustomField>