force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Product_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Received_Date__c</fullName>
    <formula>OLY_Complaint__r.OLY_Product_Returned_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Received Date</label>
    <type>Date</type>
</CustomField>