force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Regional_Complaint_Handling_Center__c.field-meta.xml
<CustomField>
    <fullName>OLY_Regional_Complaint_Handling_Center__c</fullName>
    <formula>TEXT(OLY_Complaint__r.OLY_Regional_Complaint_Handling_Center__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Complaint Handling Center</label>
    <type>Text</type>
</CustomField>