force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Regional_Investigation_Center__c.field-meta.xml
<CustomField>
    <fullName>OLY_Regional_Investigation_Center__c</fullName>
    <formula>TEXT(OLY_Investigation__r.OLY_Regional_Investigation_Center__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Investigation Center</label>
    <type>Text</type>
</CustomField>