force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Regulatory_Review_Action__c.field-meta.xml
<CustomField>
    <fullName>OLY_Regulatory_Review_Action__c</fullName>
    <label>zRegulatory Review Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in Reporting Decision and/or Type</fullName>
            </value>
            <value>
                <fullName>No Change in Reporting Decision and/or Type</fullName>
            </value>
            <value>
                <fullName>New/Additional Information Provided</fullName>
            </value>
            <value>
                <fullName>Reviewed &amp; No Further Action is Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>