force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Related_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>OLY_Related_Inquiry__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; OLY_Investigation__r.TWD_Complaint__r.CMPL123CME__Related_Inquiry__c, OLY_Investigation__r.TWD_Complaint__r.CMPL123CME__Related_Inquiry__r.Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zRelated Inquiry</label>
    <type>Text</type>
</CustomField>