force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Requested_Action__c.field-meta.xml
<CustomField>
    <fullName>OLY_Requested_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>