force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>OLY_Submitted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>