force-app/main/default/objects/CMPL123__Action__c/fields/OLY_Type__c.field-meta.xml
<CustomField>
    <fullName>OLY_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAPA/Risk Assessment Request</fullName>
            </value>
            <value>
                <fullName>Customer Response</fullName>
            </value>
            <value>
                <fullName>Decision Tree Request</fullName>
            </value>
            <value>
                <fullName>DHR Review Request</fullName>
            </value>
            <value>
                <fullName>Documentation/Labeling Review</fullName>
            </value>
            <value>
                <fullName>General Action</fullName>
            </value>
            <value>
                <fullName>Information Request</fullName>
            </value>
            <value>
                <fullName>Investigation Request</fullName>
            </value>
            <value>
                <fullName>Medical Safety Assessment</fullName>
            </value>
            <value>
                <fullName>Product Return</fullName>
            </value>
            <value>
                <fullName>Regulatory Agency Request</fullName>
            </value>
            <value>
                <fullName>Service History Reports</fullName>
            </value>
            <value>
                <fullName>Source System Update</fullName>
            </value>
            <value>
                <fullName>Supplier Request</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>URGENT : Reportability Review – Investigation Completed</fullName>
            </value>
            <value>
                <fullName>URGENT : Reportability Review – New Information Available</fullName>
            </value>
            <value>
                <fullName>Warranty (Commercial Decision)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>