force-app/main/default/objects/CMPL123__Action__c/fields/Stand_Alone_CAPA__c.field-meta.xml
<CustomField>
    <fullName>Stand_Alone_CAPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stand Alone CAPA</label>
    <referenceTo>CMPL123QMS__Stand_Alone_CAPA__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>