force-app/main/default/objects/CMPL123__Action__c/fields/TWD_Change_Control__c.field-meta.xml
<CustomField>
    <fullName>TWD_Change_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Control</label>
    <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>TWD_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>