force-app/main/default/objects/CMPL123__Action__c/fields/TWD_Department__c.field-meta.xml
<CustomField>
    <fullName>TWD_Department__c</fullName>
    <label>Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TWD_Department</valueSetName>
    </valueSet>
</CustomField>