force-app/main/default/objects/CMPL123__Action__c/fields/TWD_Non_Conformance__c.field-meta.xml
<CustomField>
    <fullName>TWD_Non_Conformance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nonconformance</label>
    <referenceTo>CMPL123QMS__Non_Conformance__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>