force-app/main/default/objects/CMPL123__Action__c/fields/TWD_Quality_Event__c.field-meta.xml
<CustomField>
    <fullName>TWD_Quality_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Event</label>
    <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>TWD_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>