force-app/main/default/objects/CMPL123__Action__c/fields/zOLY_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>zOLY_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zCompleted Date</label>
    <type>Date</type>
</CustomField>