force-app/main/default/objects/CMPL123__Action__c/validationRules/CMPL123__Due_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CMPL123__Due_Date_Required</fullName>
    <active>true</active>
    <description>Due Date is required when validation is active.</description>
    <errorConditionFormula>ISBLANK( CMPL123__Due_Date__c )</errorConditionFormula>
    <errorDisplayField>CMPL123__Due_Date__c</errorDisplayField>
    <errorMessage>Due Date is required.</errorMessage>
</ValidationRule>