force-app/main/default/objects/CMPL123__Action__c/validationRules/Prevent_changing_parent_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_parent_Complaint</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(OLY_Complaint__c))),
    ISCHANGED(OLY_Complaint__c)
)</errorConditionFormula>
    <errorDisplayField>OLY_Complaint__c</errorDisplayField>
    <errorMessage>This record cannot be unlinked from its parent record.</errorMessage>
</ValidationRule>