force-app/main/default/objects/CMPL123__Action__c/validationRules/Prevent_changing_parent_Inquiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_parent_Inquiry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(OLY_Inquiry__c))),
    ISCHANGED(OLY_Inquiry__c)
)</errorConditionFormula>
    <errorDisplayField>OLY_Inquiry__c</errorDisplayField>
    <errorMessage>This record cannot be unlinked from its parent record.</errorMessage>
</ValidationRule>