force-app/main/default/objects/CMPL123__Action__c/validationRules/Prevent_changing_parent_Investigation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_parent_Investigation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PRIORVALUE(OLY_Investigation__c))),
    ISCHANGED(OLY_Investigation__c)
)</errorConditionFormula>
    <errorDisplayField>OLY_Investigation__c</errorDisplayField>
    <errorMessage>This record cannot be unlinked from its parent record.</errorMessage>
</ValidationRule>