force-app/main/default/objects/CMPL123__Action__c/validationRules/Validation_for_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Due_Date</fullName>
    <active>true</active>
    <description>Used in IST Pharma - Meddev 3.5</description>
    <errorConditionFormula>AND( OR( ISNEW(),ISCHANGED( CMPL123__Due_Date__c )), CMPL123__Due_Date__c &lt; TODAY())</errorConditionFormula>
    <errorMessage>The Due Date field cannot be populated with a date in the past.</errorMessage>
</ValidationRule>