force-app/main/default/objects/CMPL123__Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OLY_Action_ID__c</columns>
    <columns>TWD_Department__c</columns>
    <columns>CMPL123__Due_Date__c</columns>
    <columns>OLY_Assigned_To__c</columns>
    <columns>CMPL123_WF_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>